<resources>
    <string name="app_name">JoeyTestApp</string>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="ambient_monitor">Ambient Monitor</string>
    <string name="app_only">App Only</string>
    <string name="app_sensor">App &amp; Sensor</string>
    <string name="auto_brightness">Auto-Brightness</string>
    <string name="auto_dst_update">Auto-DST Update</string>
    <string name="battery_sync">Battery Sync ...</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="brightness">Brightness</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download">Cancel Download</string>
    <string name="celsius_abbrev">C</string>
    <string name="clock">Clock</string>
    <string name="conditions">Conditions</string>
    <string name="conditions_sync">Conditions Sync ...</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="dataExport">Data Export</string>
    <string name="day">Day</string>
    <string name="days">days</string>
    <string name="delete_confirmation">Are you sure you want to delete this Sensor?</string>
    <string name="delete_from_where">Please select from where you would like to delete the log data.</string>
    <string name="delete_log_data">Delete Log Data</string>
    <string name="delete_sensor">Delete Sensor</string>
    <string name="detailed_sensor_settings">Detailed Sensor Settings</string>
    <string name="device_version">Sensor Version</string>
    <string name="discovering_services">Discovering Services</string>
    <string name="downloading">Downloading</string>
    <string name="erase">Erase</string>
    <string name="erase_or_ignore_data">Erase or Ignore Data</string>
    <string name="erase_or_ignore_message">Are you sure you would like to permanently Erase the Log Data on this sensor? You may also choose to have this phone Ignore the Data so that other users may access the data from the sensor.</string>
    <string name="error">Error</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="export_at">export at</string>
    <string name="export_date">Export Date</string>
    <string name="export_sensor_data">Export Sensor Data</string>
    <string name="fahrenheit_abbrev">F</string>
    <string name="fast">Fast</string>
    <string name="full_download">Full Download</string>
    <string name="graph_1d">1D</string>
    <string name="graph_1h">1H</string>
    <string name="graph_1m">1M</string>
    <string name="graph_1w">1W</string>
    <string name="graph_1y">1Y</string>
    <string name="graph_3m">3M</string>
    <string name="hour">Hour</string>
    <string name="hours">hours</string>
    <string name="how_to_start">How to Start</string>
    <string name="hr">hr</string>
    <string name="hum">Hum</string>
    <string name="humidity">Humidity (%)</string>
    <string name="ignore">Ignore</string>
    <string name="keep">Keep</string>
    <string name="known_devices">Known Sensors</string>
    <string name="last">last</string>
    <string name="led_color">LED Color</string>
    <string name="led_indicator">LED Indicator</string>
    <string name="light">Light</string>
    <string name="lightLux">Light (Lux)</string>
    <string name="loading_data">Loading Data</string>
    <string name="logging_period">Logging Period</string>
    <string name="measurement_logging_speed">Measurement &amp; Logging Period</string>
    <string name="measurement_period">Measurement Period</string>
    <string name="medium">Medium</string>
    <string name="min">min</string>
    <string name="minute">Minute</string>
    <string name="month">Month</string>
    <string name="n_a">n/a</string>
    <string name="name">Name</string>
    <string name="next_change">Next Change</string>
    <string name="noDataExists">No Data to Export</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_dst">No DST</string>
    <string name="no_paired_devices">No Sensor Connected</string>
    <string name="none_found">None Found</string>
    <string name="normal">Normal</string>
    <string name="pair_title">Pair New Sensor</string>
    <string name="pairing_error">There has been an error pairing this sensor. Please try again.</string>
    <string name="pairing_message">Press and hold the \'PAIR\' button on the Sensor for 5 seconds. Select the Sensor from the list below to initiate the pairing process.</string>
    <string name="pdf_show_local_progress_title">Downloading File</string>
    <string name="pdf_show_online_dialog_question">Would you like to open with Google Drive?</string>
    <string name="pdf_show_online_dialog_title">PDF Viewer Unavailable</string>
    <string name="please_check_your_internet_connection">Please check your Internet connection.</string>
    <string name="please_move_closer_to_the_sensor">Please Move Closer to the Sensor</string>
    <string name="precision">Precision</string>
    <string name="press_and_hold_pair">Press and hold the \'PAIR\' button on the Sensor for 5 seconds.</string>
    <string name="press_plus">Press \'+\' to add sensor</string>
    <string name="previous_log_data_exists">Previous Log Data Exists</string>
    <string name="previous_log_message">Previous Log Data has been detected on this sensor. Would you like to Keep or Erase the existing Log Data on this sensor?</string>
    <string name="previously_paired_device">Previously Paired Sensor</string>
    <string name="previously_paired_message">This Sensor was previously paired. Would you like to Restore its previous settings?</string>
    <string name="ready_to_connect">Ready to Connect</string>
    <string name="restore">Restore</string>
    <string name="scroll_display">Scroll Display</string>
    <string name="sec">sec</string>
    <string name="second">Second</string>
    <string name="selected_screen">Selected Screen</string>
    <string name="sensor">Sensor</string>
    <string name="sensor_logging_capacity">Sensor Logging Capacity</string>
    <string name="sensor_only">Sensor Only</string>
    <string name="settings_sync">Settings Sync ...</string>
    <string name="start_sync">Start Sync</string>
    <string name="status">Status</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing</string>
    <string name="tap_sensor">Tap Sensor XXX to confirm</string>
    <string name="temp">Temp</string>
    <string name="tempC">Temperature (C)</string>
    <string name="tempF">Temperature (F)</string>
    <string name="temperature">Temperature</string>
    <string name="time_format">Time Format</string>
    <string name="time_sync">Time Sync ...</string>
    <string name="time_zone">Time Zone</string>
    <string name="title_activity_sensor_master_settings">Settings</string>
    <string name="title_activity_sensor_settings">Detailed Sensor Settings</string>
    <string name="today">Today</string>
    <string name="unable_to_download">Unable to Download</string>
    <string name="unable_to_find_product">Product Type Not Found. Please contact your distributor.</string>
    <string name="version">App Version</string>
    <string name="view_instructions">View Instruction Manual</string>
    <string name="view_log_graph">View Log Graph</string>
    <string name="year">Year</string>
    <string name="yesterday">Yesterday</string>
    <string name="hello_world">Hello world!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>