<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20dp"
        android:id="@+id/popup_scanner_titleTextView"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pair_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/popup_scanner_messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pairing_message"
        android:layout_below="@+id/popup_scanner_titleTextView"
        android:layout_centerHorizontal="true"/>
    <ListView
        android:id="@+id/popup_scanner_listView"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/popup_scanner_cancelButton"
        android:layout_below="@+id/popup_scanner_messageTextView"/>
    <TextView
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/popup_scanner_list_emptyView"
        android:background="@color/white"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/none_found"
        android:layout_above="@+id/popup_scanner_cancelButton"
        android:layout_below="@+id/popup_scanner_messageTextView"/>
    <Button
        android:id="@+id/popup_scanner_cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
