<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/activity_conditions_zoomButtons" android:paddingTop="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <View android:background="@color/gray70" android:layout_width="match_parent" android:layout_height="5px"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/activity_conditions_zoom0" android:tag="0" android:background="@drawable/toggle_selector_rect_noborder" android:layout_width="65dp" android:layout_height="28dp" android:checked="true" android:textOn="@string/graph_1h" android:textOff="@string/graph_1h" android:layout_weight="1"/>
            <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/activity_conditions_zoom1" android:tag="1" android:background="@drawable/toggle_selector_rect_noborder" android:layout_width="65dp" android:layout_height="28dp" android:checked="false" android:textOn="@string/graph_1d" android:textOff="@string/graph_1d" android:layout_weight="1"/>
            <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/activity_conditions_zoom2" android:tag="2" android:background="@drawable/toggle_selector_rect_noborder" android:layout_width="65dp" android:layout_height="28dp" android:checked="false" android:textOn="@string/graph_1w" android:textOff="@string/graph_1w" android:layout_weight="1"/>
            <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/activity_conditions_zoom3" android:tag="3" android:background="@drawable/toggle_selector_rect_noborder" android:layout_width="65dp" android:layout_height="28dp" android:checked="false" android:textOn="@string/graph_1m" android:textOff="@string/graph_1m" android:layout_weight="1"/>
            <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/activity_conditions_zoom4" android:tag="4" android:background="@drawable/toggle_selector_rect_noborder" android:layout_width="65dp" android:layout_height="28dp" android:checked="false" android:textOn="@string/graph_3m" android:textOff="@string/graph_3m" android:layout_weight="1"/>
            <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/activity_conditions_zoom5" android:tag="5" android:background="@drawable/toggle_selector_rect_noborder" android:layout_width="65dp" android:layout_height="28dp" android:checked="false" android:textOn="@string/graph_1y" android:textOff="@string/graph_1y" android:layout_weight="1"/>
        </LinearLayout>
        <View android:background="@color/gray70" android:layout_width="match_parent" android:layout_height="5px"/>
    </LinearLayout>
    <pcp.com.bttemperature.controls.SelectiveViewPager android:id="@+id/activity_conditions_viewPager" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/activity_conditions_zoomButtons"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/activity_conditions_overlay" android:background="@color/cursorBg" android:padding="5dp" android:layout_width="160dp" android:layout_height="wrap_content" android:layout_marginTop="52dp" android:layout_alignTop="@+id/activity_conditions_viewPager">
        <TextView android:textColor="@color/white" android:id="@+id/activity_conditions_cursor_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Date"/>
        <TextView android:textColor="@color/white" android:id="@+id/activity_conditions_cursor_temp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Temp: 23.6" android:fontFamily="sans-serif-light"/>
        <TextView android:textColor="@color/white" android:id="@+id/activity_conditions_cursor_humidity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Humidity: 79%" android:fontFamily="sans-serif-light"/>
        <TextView android:textColor="@color/white" android:id="@+id/activity_conditions_cursor_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Light: 542 lx" android:fontFamily="sans-serif-light"/>
    </LinearLayout>
    <View android:id="@+id/activity_conditions_cursor" android:background="@color/gray50" android:layout_width="4px" android:layout_height="match_parent" android:layout_marginLeft="20dp" android:layout_marginTop="52dp" android:layout_alignTop="@+id/activity_conditions_viewPager"/>
</RelativeLayout>
