<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/item_sel" android:descendantFocusability="blocksDescendants" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="44dp">
    <TextView android:textSize="17sp" android:textColor="@color/gray20" android:id="@+id/list_item_measurement_textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14dp" android:layout_marginBottom="14dp" android:text="Temp Units" android:fontFamily="sans-serif-medium" android:layout_marginStart="20dp"/>
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginBottom="14dp">
        <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/list_item_measurement_seg1" android:tag="10" android:background="@drawable/toggle_selector_rect" android:layout_width="65dp" android:layout_height="28dp" android:checked="true" android:textOn="@string/fast" android:textOff="@string/fast" android:layout_weight="1"/>
        <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/list_item_measurement_seg2" android:tag="11" android:background="@drawable/toggle_selector_rect" android:layout_width="65dp" android:layout_height="28dp" android:layout_marginLeft="-4px" android:checked="false" android:textOn="@string/medium" android:textOff="@string/medium" android:layout_weight="1"/>
        <ToggleButton android:textSize="12sp" android:textColor="@drawable/toggle_color" android:id="@+id/list_item_measurement_seg3" android:tag="12" android:background="@drawable/toggle_selector_rect" android:layout_width="65dp" android:layout_height="28dp" android:layout_marginLeft="-4px" android:checked="false" android:textOn="@string/normal" android:textOff="@string/normal" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="3dp">
        <TextView android:textSize="15sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/measurement_period" android:fontFamily="sans-serif" android:layout_marginStart="20dp"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" android:fontFamily="sans-serif"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray50" android:id="@+id/list_item_measurement_measPeriod" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20 sec" android:fontFamily="sans-serif" android:layout_marginStart="5dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp">
        <TextView android:textSize="15sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logging_period" android:fontFamily="sans-serif" android:layout_marginStart="20dp"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" android:fontFamily="sans-serif"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray50" android:id="@+id/list_item_measurement_loggingPeriod" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20 sec" android:fontFamily="sans-serif" android:layout_marginStart="5dp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp">
        <TextView android:textSize="15sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sensor_logging_capacity" android:fontFamily="sans-serif" android:layout_marginStart="20dp"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":" android:fontFamily="sans-serif"/>
        <TextView android:textSize="15sp" android:textColor="@color/gray50" android:id="@+id/list_item_measurement_loggingCapacity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20 sec" android:fontFamily="sans-serif" android:layout_marginStart="5dp"/>
    </LinearLayout>
</LinearLayout>
