<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/gray95" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:background="@drawable/cell_background_borders" android:paddingLeft="15dp" android:paddingTop="10dp" android:paddingRight="15dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15dp">
            <TextView android:textSize="16sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" android:fontFamily="sans-serif-light"/>
            <TextView android:textSize="14sp" android:textColor="@color/gray50" android:layout_gravity="center" android:id="@+id/activity_sensor_master_settings_hexNameTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:text="(3E1)" android:fontFamily="sans-serif-light"/>
        </LinearLayout>
        <EditText android:id="@+id/activity_sensor_master_settings_nameTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLength="100" android:layout_weight="1" android:inputType="none|text|textCapWords|textNoSuggestions"/>
    </LinearLayout>
    <RelativeLayout android:id="@+id/activity_sensor_master_settings_detailedLayout" android:background="@drawable/cell_background_borders_sel" android:paddingLeft="15dp" android:paddingTop="10dp" android:paddingRight="15dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15dp">
            <TextView android:textSize="18sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detailed_sensor_settings"/>
            <TextView android:textSize="14sp" android:textStyle="italic" android:textColor="@color/gray50" android:id="@+id/activity_sensor_master_settings_connectionStatus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/status" android:fontFamily="sans-serif-light"/>
        </LinearLayout>
        <ImageView android:id="@+id/activity_sensor_master_settings_disclosureImage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_disclosure" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <TextView android:textSize="17sp" android:textColor="@color/white" android:id="@+id/activity_sensor_master_settings_exportTextView" android:background="@color/gray70" android:paddingLeft="15dp" android:paddingTop="13dp" android:paddingRight="15dp" android:paddingBottom="13dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/export_sensor_data"/>
    <RelativeLayout android:id="@+id/activity_sensor_master_settings_instructionsLayout" android:background="@drawable/cell_background_borders_sel" android:paddingLeft="15dp" android:paddingTop="13dp" android:paddingRight="15dp" android:paddingBottom="13dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView android:textSize="17sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/view_instructions"/>
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_disclosure" android:layout_centerVertical="true" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/cell_background_borders" android:paddingLeft="15dp" android:paddingTop="13dp" android:paddingRight="15dp" android:paddingBottom="13dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView android:textSize="17sp" android:textColor="@color/gray30" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_version" android:layout_weight="1"/>
        <TextView android:textSize="17sp" android:textColor="@color/gray50" android:id="@+id/activity_sensor_master_settings_versionTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0.0.1" android:fontFamily="sans-serif-light"/>
    </LinearLayout>
</LinearLayout>
